	. printer infos are now retrieved from the correct host
	  for remote printers and classes (idem for IPP report)
  * general: implementation of a DCOP signal communication to
    synchronize all kdeprint apps, a plugin change in one app is
    notified to all other opened apps (via DCOP).
  * kicker extension: made extension aware of plugin change in
    other apps (using new DCOP signal comm).

09/11/2001 Michael Goffioul <goffioul@imec.be>
  * CUPS plugin: added the possibility to list jobs on remote
    printers. No management is allowed on remote jobs (yet?).

10/11/2001 Michael Goffioul <goffioul@imec.be>
  * general: use KShellProcess::quote() for any quoting. Normally,
    all quoting problem should be fixed now.
    
12/11/2001 Michael Goffioul <goffioul@imec.be>
  * CUPS: redesigned the "cups-add-smb" dialog to make it more
    user-driendly.

13/11/2001 Michael GOffioul <goffioul@imec.be>
  * general: implementation of a KActiveLabel class to embed active
    links in labels. Clicking on it "exec" the associated URL.
  * general: make use of KActiveLabel in the first page of the
    "add-printer" wizard.
  * CUPS: make use of KActiveLabel in the "cups-add-smb" wizard.
  * wizard: SMB printers with space in their name are now shown
    correctly when scanning the network (however it should be
    avoided as smbspool seems to be unable to handle it).

14/11/2001 Michael Goffioul <goffioul@imec.be>
  * ioslave: uploaded new templates from Chris (which adds support
    for pseudo printers
  * manager: modified RootOnly message for better consistency between
    "root" and "administrator" concepts
  * print dialog: updated accels (general, Qt, copies and other CUPS
    pages)
  * print dialog:
  	. file selection: line edit -> listview
	. file selection made as print dialog page and inserted at
	  the same level than "Copies"
	. added hiding mechanism to make the dialog more compact
	  (show/hide button can probably be improved)